[project]
name = "pygating"
version = "0.0.2"
authors = [
  { name="Aleksey Tsaplin", email="tsapleksey@gmail.com" },
]
description = "A small package for creating and using configurations to control code flow"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/atsaplin/pygating"
Issues = "https://github.com/atsaplin/pygating"
